--- a/oauth-implementation/index.html
+++ b/oauth-implementation/index.html
@@ -6,6 +6,6 @@
     <body>
         <div>OAuth 2.0 Implementation</div>
 
-        <a href="https://accounts.google.com/o/oauth2/v2/auth?response_type=code&client_id=220231227847-fabrd2a3ogrstjha4ugl60626qp76vmb.apps.googleusercontent.com"></a>
+        <a href="https://accounts.google.com/o/oauth2/v2/auth?response_type=code&client_id=220231227847-fabrd2a3ogrstjha4ugl60626qp76vmb.apps.googleusercontent.com&redirect_uri=https://eminent-cargo-172005.appspot.com/oauth&scope=email&state=secret123"></a>
     </body>
 </html>
