--- a/oauth-implementation/index.html
+++ b/oauth-implementation/index.html
@@ -41,7 +41,7 @@
                 super();
                 let shadowRoot = this.attachShadow({mode: 'open'});
                 shadowRoot.innerHTML = `
-                    <a href="https://accounts.google.com/o/oauth2/v2/auth?response_type=code&client_id=220231227847-fabrd2a3ogrstjha4ugl60626qp76vmb.apps.googleusercontent.com&redirect_uri=https://eminent-cargo-172005.appspot.com/oauth&scope=email&state=secret123">
+                    <a href="https://accounts.google.com/o/oauth2/v2/auth?response_type=code&client_id=220231227847-fabrd2a3ogrstjha4ugl60626qp76vmb.apps.googleusercontent.com&redirect_uri=https://${window.location.host}/oauth&scope=email&state=secret123">
                         Click here to authenticate
                     </a>
                 `;
