--- a/oauth-implementation/index.html
+++ b/oauth-implementation/index.html
@@ -7,49 +7,49 @@
         <div>OAuth 2.0 Implementation</div>
         <oauth-app show-link></oauth-app>
 
-    <script>
-        class OAuthAppComponent extends HTMLElement {
+        <script>
+            class OAuthAppComponent extends HTMLElement {
 
-            static get observedAttributes() {
-                return ['show-link'];
+                static get observedAttributes() {
+                    return ['show-link'];
+                }
+
+                constructor() {
+                    super();
+                    this.template = this.attachShadow({mode: 'open'});
+                    this.render();
+                }
+
+                attributeChangedCallback(attributeName, oldValue, newValue, namespace) {
+                    console.log(`${attributeName} changed from ${oldValue} to ${newValue}`);
+                    this.render();
+                }
+
+                render() {
+                    const link = this.hasAttribute('show-link') ? "<oauth-link></oauth-link>" : "";
+
+                    this.template.innerHTML = `
+                        <div>${link}</div>
+                    `;
+                }
             }
 
-            constructor() {
-                super();
-                this.template = this.attachShadow({mode: 'open'});
-                this.render();
+
+            class OAuthLinkComponent extends HTMLElement {
+
+                constructor() {
+                    super();
+                    let shadowRoot = this.attachShadow({mode: 'open'});
+                    shadowRoot.innerHTML = `
+                        <a href="https://accounts.google.com/o/oauth2/v2/auth?response_type=code&client_id=220231227847-fabrd2a3ogrstjha4ugl60626qp76vmb.apps.googleusercontent.com&redirect_uri=https://${window.location.host}/oauth&scope=email&state=secret123">
+                            Click here to authenticate
+                        </a>
+                    `;
+                }
             }
 
-            attributeChangedCallback(attributeName, oldValue, newValue, namespace) {
-                console.log(`${attributeName} changed from ${oldValue} to ${newValue}`);
-                this.render();
-            }
-
-            render() {
-                const link = this.hasAttribute('show-link') ? "<oauth-link></oauth-link>" : "";
-
-                this.template.innerHTML = `
-                    <div>${link}</div>
-                `;
-            }
-        }
-
-
-        class OauthLinkComponent extends HTMLElement {
-
-            constructor() {
-                super();
-                let shadowRoot = this.attachShadow({mode: 'open'});
-                shadowRoot.innerHTML = `
-                    <a href="https://accounts.google.com/o/oauth2/v2/auth?response_type=code&client_id=220231227847-fabrd2a3ogrstjha4ugl60626qp76vmb.apps.googleusercontent.com&redirect_uri=https://${window.location.host}/oauth&scope=email&state=secret123">
-                        Click here to authenticate
-                    </a>
-                `;
-            }
-        }
-
-        customElements.define('oauth-app', OAuthAppComponent);
-        customElements.define('oauth-link', OauthLinkComponent);
-    </script>
+            customElements.define('oauth-app', OAuthAppComponent);
+            customElements.define('oauth-link', OAuthLinkComponent);
+        </script>
     </body>
 </html>
