--- a/oauth-implementation/index.html
+++ b/oauth-implementation/index.html
@@ -2,10 +2,32 @@
     <head>
         <title>OAuth 2.0 Implementation</title>
         <meta name="description" content="">
+
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+        <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+        <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     </head>
     <body>
-        <div>OAuth 2.0 Implementation</div>
-        <oauth-app show-link></oauth-app>
+        <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+            <header class="mdl-layout__header">
+                <div class="mdl-layout__header-row">
+                    <span class="mdl-layout-title">OAuth 2.0 Implementation</span>
+                </div>
+            </header>
+
+            <main class="mdl-layout__content">
+                <div class="page-content" style="display: flex; flex-direction: column; align-items: center; padding: 10px 0;">
+                    <div class="mdl-card mdl-shadow--4dp">
+                        <div class="mdl-card__supporting-text">
+                            This application uses Google OAuth 2.0 to authenticate the user and grant permission
+                            to use the Google Plus API to retrieve your name and public profile URL.
+
+                            <oauth-app show-link></oauth-app>
+                        </div>
+                    </div>
+                </div>
+            </main>
+        </div>
 
         <script>
             class OAuthAppComponent extends HTMLElement {
@@ -29,7 +51,7 @@
                     const link = this.hasAttribute('show-link') ? "<oauth-link></oauth-link>" : "";
 
                     this.template.innerHTML = `
-                        <div>${link}</div>
+                        <div style="display: flex; flex-direction: column;">${link}</div>
                     `;
                 }
             }
@@ -39,11 +61,28 @@
 
                 constructor() {
                     super();
-                    let shadowRoot = this.attachShadow({mode: 'open'});
-                    shadowRoot.innerHTML = `
-                        <a href="https://accounts.google.com/o/oauth2/v2/auth?response_type=code&client_id=220231227847-fabrd2a3ogrstjha4ugl60626qp76vmb.apps.googleusercontent.com&redirect_uri=https://${window.location.host}/oauth&scope=email&state=secret123">
+                    this.template = this.attachShadow({mode: 'open'});
+                }
+
+                connectedCallback() {
+                    if (!("fetch" in window)) {
+                        alert("Your browser does not support the 'fetch' API.");
+                    }
+
+                    fetch('/state')
+                        .then(response => response.json())
+                        .then((data) => {
+                            this.oauthState = data['oauthState'];
+                            this.render();
+                        });
+                }
+
+                render() {
+                    this.template.innerHTML = `
+                        <a href="https://accounts.google.com/o/oauth2/v2/auth?response_type=code&client_id=220231227847-fabrd2a3ogrstjha4ugl60626qp76vmb.apps.googleusercontent.com&redirect_uri=https://${window.location.host}/oauth&scope=email&state=${this.oauthState}">
                             Click here to authenticate
                         </a>
+                        <div>State variable: <b>${this.oauthState}</b></div>
                     `;
                 }
             }
