--- a/oauth-implementation/oauth.html
+++ b/oauth-implementation/oauth.html
@@ -2,11 +2,36 @@
     <head>
         <title>OAuth 2.0 Implementation</title>
         <meta name="description" content="">
+
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+        <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+        <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     </head>
     <body>
-        <div>You have been authenticated!</div>
+        <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+            <header class="mdl-layout__header">
+                <div class="mdl-layout__header-row">
+                    <span class="mdl-layout-title">OAuth 2.0 Implementation</span>
+                </div>
+            </header>
 
-        <google-plus></google-plus>
+            <main class="mdl-layout__content">
+                <div class="page-content" style="display: flex; flex-direction: column; align-items: center; padding: 10px 0;">
+                    <div class="mdl-card mdl-shadow--4dp">
+                        <div class="mdl-card__supporting-text">
+                            This application uses Google OAuth 2.0 to authenticate the user and grant permission
+                            to use the Google Plus API to retrieve your name and public profile URL.
+
+                            <div>You have been authenticated!</div>
+
+                            <hr>
+
+                            <google-plus></google-plus>
+                        </div>
+                    </div>
+                </div>
+            </main>
+        </div>
 
         <script>
             class GooglePlusComponent extends HTMLElement {
@@ -25,7 +50,6 @@
 
                     fetch('/me')
                         .then(response => response.json())
-                        .then(json => JSON.parse(json))
                         .then((data) => {
                             this.googlePlusData = data;
                             this.render();
@@ -38,6 +62,7 @@
                             <div style="display: flex; flex-direction: column;">
                                 <div>${this.googlePlusData["name"]["givenName"]} ${this.googlePlusData["name"]["familyName"]}</div>
                                 <a href="${this.googlePlusData['url']}">View Google+ profile</a>
+                                <div>State variable: <b>${this.googlePlusData['oauthState']}</b></div>
                             </div>
                         `;
                     } else {
